// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValueStore Should associate with edge.Function and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_cloudfront_function": {
      "Function_76856677": {
        "code": "whatever",
        "comment": "Hello World",
        "key_value_store_associations": [
          "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}"
        ],
        "name": "g-hello-world",
        "publish": true,
        "runtime": "cloudfront-js-2.0",
        "tags": {
          "Name": "Default-Function",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_cloudfront_key_value_store": {
      "Store_1D2A845B": {
        "name": "g-hello-world"
      }
    },
    "aws_cloudfrontkeyvaluestore_key": {
      "Store_Key-0_D960E2A5": {
        "key": "key1",
        "key_value_store_arn": "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}",
        "value": "value1"
      },
      "Store_Key-1_A1F55497": {
        "key": "key2",
        "key_value_store_arn": "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}",
        "value": "value2"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`KeyValueStore Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {}
    ]
  },
  "resource": {
    "aws_cloudfront_key_value_store": {
      "Store_1D2A845B": {
        "name": "g-hello-world"
      }
    },
    "aws_cloudfrontkeyvaluestore_key": {
      "Store_Key-0_D960E2A5": {
        "key": "key1",
        "key_value_store_arn": "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}",
        "value": "value1"
      },
      "Store_Key-1_A1F55497": {
        "key": "key2",
        "key_value_store_arn": "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}",
        "value": "{\\"key2.1\\":\\"value2.1\\"}"
      },
      "Store_Key-2_54F8556B": {
        "key": "key3",
        "key_value_store_arn": "\${aws_cloudfront_key_value_store.Store_1D2A845B.arn}",
        "value": "[\\"value3.1\\",\\"value3.2\\"]"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
